[package]
name = "scarlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

[dependencies]
bevy = "0.11.2"
bevy_svg = { version = "0.11.0", default-features = false, features = ["2d"] }
bevy_rapier2d = "0.22.0"
